<resources>
    //登录
    <string name="user_name">学号/手机号</string>
    <string name="login_btn_name">登录</string>
    <string name="forget_password_name">忘记密码？</string>
    <string name="new_user_name">创建账号</string>
    <string name="employment_name">就业</string>
    <string name="enertprenrurshio_name">创业</string>
    <string name="recruitment_name">公司</string>
    <string name="chat_name">聊天</string>

    //注册1
    <string name="title_name">欢迎加入锦鲤</string>
    <string name="ltitle_name">用实力·博人生</string>
    <string name="id_name">账号</string>
    <string name="nickname_name">昵称</string>
    <string name="logonbtn_name">注册</string>
    <string name="password_name">密码</string>
    <string name="about_name">点击以上按钮代表同意用户协议</string>
    //完善
    <string name="addmessage_name">请完善您的信息</string>
    <string name="welcome_name">展现自我</string>
    <string name="sex_name">性别</string>
    <string name="university_name">学校</string>
    <string name="local_name">地址</string>
    <string name="age_name">年龄</string>
    <string name="addmbtn_name">添加</string>
    //简历
    <string name="mymessage_name">我的简历</string>
    <string name="myname_name">姓名</string>
    <string name="mysex_name">性别</string>
    <string name="myage_name">年龄</string>
    <string name="mystage_name">面貌</string>
    <string name="myschool_name">院校</string>
    <string name="mypopisal_name">专业</string>
    <string name="myphone_name">电话</string>
    <string name="aboutmyself_name">个人简介</string>
    //注册
    <string name="littlet_name">用实力·博人生</string>
    <string name="newUser_name">请输入11位手机号</string>
    <string name="pass_name">请输入6-12位字母或数字的密码</string>
    <string name="pass2_name">确认密码</string>

    //menu
    <string name="title">锦鲤</string>
    //主界面
    <string name="Employment_url0">中华英才</string>
    <string name="Employment_url1">前程无忧</string>
    <string name="Employment_url2">猎聘</string>
    <string name="Employment_url3">智联招聘</string>
    <string name="Employment_url4">58同城</string>
    <string name="Main_Employment_massage">就业资讯</string>
    //action_bar
    <string name="app_name">锦鲤</string>
    //用户界面
    <string name="User_user_message">我的信息</string>
    <string name="User_user_school">交易平台</string>
    <string name="User_user_resume">选择高校</string>
    <string name="User_account_set">修改资料</string>
    <string name="User_about_our">关于我们</string>
    <string name="User_update">系统更新</string>
    //界面下端Tab
    <string name="Employment">就业</string>
    <string name="Entrepreneurshio">创业</string>
    <string name="recruitment">招聘</string>
    <string name="Chat">聊天</string>
    //用户学校界面
    <string name="user_school_selectschool">选择学校</string>
    <string name="user_school_secondhand">二手交易平台</string>
    //账号设置.
    <string name="set_">请再输入账号密码，确认身份</string>
    <string name="set_Button_ok">确认</string>
    <string name="set_new_massage">请输入修改信息</string>
    //我的简历
    <string name="user_resume_button">添加简历</string>
    //二手交易
    <string name="commodity_name">商品名称</string>
    <string name="commodity_massage">商品简介</string>
    <string name="commodity_monery">预售价格</string>
    <string name="commodity_image">图片展示</string>
    <string name="more">备注信息</string>
    <string name="phone">联系方式</string>
    //招聘
    <string name="recruitment_company_massage">简介</string>
    <string name="recruitment_company_post">在招职位</string>
    <string name="recruitment_company_request">职位要求</string>
    <string name="recruitment_company_time">招聘时间</string>
    <string name="recruitment_company_school">宣讲地点</string>
    <string name="recruitment_company_people">负责人</string>
    <string name="recruitment_company_button">发送简历</string>
    <string name="recruitment_company_post_conter">"1.郑州轻工业大学（Zhengzhou University of Light Industry），\n"
                                                   "2.简称郑轻，坐落于河南省会郑州市，属河南省重点建设高校序列，\n"
                                                    "3.简称郑轻，坐落于河南省会郑州市，属河南省重点建设高校序列 " </string>
    //关于我们界面介绍
    <string name="about_us_school">
        "\n       郑州轻工业大学（Zhengzhou University of Light Industry），简称郑轻，坐落于河南省会郑州市，属河南省重点建设高校序列，是河南省人民政府与国家烟草专卖局共建高校，卓越工程师教育培养计划建设高校，河南省博士学位授予权立项建设高校。\n\n"
        "       学校创建于1977年，原隶属国家轻工业部。1998年，转为中央和河南省共建，以地方管理为主。2011年成为河南省人民政府与国家烟草专卖局共建高校，同时成为卓越工程师教育培养计划建设高校，并入选教育部“长江学者和创新团队发展计划”。\n\n"
        "       郑州轻工业大学是河南省最早开展中外合作办学项目的公立高等院校，拥有河南省最早设立的雅思考试中心，是中南地区一所以轻工、食品、烟草、电器、艺术、工业设计为特色的公立本科院校。\n\n"
        "       据2018年1月学校官网显示，学校拥有17个学院、65个本科专业，有教职工1800余人，副高级职称以上教师600余人，拥有博士学位教师600余人。有在校生24000余人，其中全日制本专科生23000余人，各类在校硕士研究生1000余人。"</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登  录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">账号是非法的</string>
    <string name="error_invalid_password">输入的密码太短</string>
    <string name="error_incorrect_password">用户名或密码不正确</string>
    <string name="error_field_required">这个是必填的</string>
    <string name="error_unregistered_email">该账号未注册</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_message">我的信息</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
