<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/set_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:paddingTop="14dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:text="@string/set_"
        android:textSize="23dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:paddingTop="30dp">


        <TextView
            android:id="@+id/set_idname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:text="@string/id_name" />

        <EditText
            android:id="@+id/set_idname_edit"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/password_name" />

        <EditText
            android:id="@+id/set_password_edit"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:textSize="16dp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="-50dp"
            android:orientation="vertical"
            android:paddingTop="30dp" />

        <Button
            android:id="@+id/set_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="40dp"
            android:text="@string/set_Button_ok"
            android:textSize="20dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_btn"
            />

    <Button
        android:id="@+id/set_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="40dp"
        android:text="切换用户"
        android:textSize="20dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_btn"
        />
</LinearLayout>




