<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/employment_refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <LinearLayout
        android:id="@+id/layout_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
    <com.youth.banner.Banner

        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="180dp"
       />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
           >

            <Button
                android:id="@+id/employment_url_0"

                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="2"
                android:background="@mipmap/employment_zhonghua"/>
            <Button
                android:id="@+id/employment_url_1"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="2"
                android:background="@mipmap/employment_qiancheng"/>
            <Button
                android:id="@+id/employment_url_2"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="2"
                android:background="@mipmap/employment_liepin"/>
            <Button
                android:id="@+id/employment_url_3"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="2"
                android:background="@mipmap/employment_zhilian"/>
            <Button
                android:id="@+id/employment_url_4"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="2"
                android:background="@mipmap/employment_tongcheng"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_marginLeft="0dp"
                android:textColor="#ccc"
                android:text="@string/Employment_url0"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="#ccc"
                android:text="@string/Employment_url1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:gravity="center"
                android:layout_weight="2"
                android:textColor="#ccc"
                android:text="@string/Employment_url2"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:gravity="center"
                android:layout_weight="2"
                android:textColor="#ccc"
                android:text="@string/Employment_url3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:gravity="center"
                android:layout_weight="2"
                android:textColor="#ccc"
                android:text="@string/Employment_url4"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/id_employment_recycleview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:background="#fff" />
    </RelativeLayout>

</LinearLayout>

</ScrollView>
</com.scwang.smartrefresh.layout.SmartRefreshLayout>






